# statly

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/statly/: __init__.py  analysis.py  cli.py  git.py  ui.py  utils.py
