[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "statly"
dynamic = ["version"]
description = "A lightweight tool for analyzing Git commit activity"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "AYMEN A", email = "let.me.code.safe@gmail.com" }]
dependencies = ["rich"]
keywords = [
    "git",
    "git-stats",
    "analytics",
    "cli",
    "developer-tools",
    "statistics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
]

[project.urls]
Homepage = "https://github.com/AYMENJD/statly"
Source = "https://github.com/AYMENJD/statly"
Tracker = "https://github.com/AYMENJD/statly/issues"

[project.scripts]
statly = "statly.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "statly.__version__" }
